Dark mode fix

--- a/apps/block_scout_web/assets/css/theme/_dark-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/_dark-theme.scss
@@ -1167,3 +1167,7 @@ $dark-stakes-banned-background: #3e314c;
 		color: $dark-primary;
 	}
 }
+
+.dark-theme-applied .confirmations-label:after {
+    background: .7rem solid $dark-light-bg;
+}
